Refs #20650: Implement Delivery mechanisms example
Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(cpp/configuration)
 add_subdirectory(cpp/content_filter)
 add_subdirectory(cpp/custom_payload_pool)
 add_subdirectory(cpp/dds)
+add_subdirectory(cpp/delivery_mechanisms)
 add_subdirectory(cpp/hello_world)
 add_subdirectory(cpp/rtps)
 add_subdirectory(cpp/xtypes)
